add missing image and edited alt attributes in porfolio section, restructured about-me section

--- a/index.html
+++ b/index.html
@@ -36,38 +36,38 @@
         </div>
     </section>
     
-    <div class="flex-row">
-        <h2 class="section-title">About Me</h2>
-        <section id="about-me" class="about-me">
-            <article class="intro">    
-                <p class="aboutme-poem">
-                Jack of all trades, master of a few,
-                always enjoy the challenge of learning something new.
-                </p>
-                <p>
-                Hi! I'm <span>Jack</span>, an aspiring Web Developer. Currently, I am a supervisor for Starbucks
-                on a diet of caffiene and always hungry for knowledge. A film geek, amateur wood-worker and photog,
-                D&D nerd, music lover and overall weird guy. <br />
-                I have made a big leap to change career paths and follow a newfound passion for all things Web Development.
-                Interested in giving me a shot? Reach out <a href="#contact">below</a>!
-                </p>
-            </article>
-            <article>
+    <section id="about-me" class="about-me">
+        <div class="flex-row">
+            <h2 class="section-title">About Me</h2>
+                <article class="intro">    
+                    <p class="aboutme-poem">
+                    Jack of all trades, master of a few,
+                    always enjoy the challenge of learning something new.
+                    </p>
+                    <p>
+                    Hi! I'm <span>Jack</span>, an aspiring Web Developer. Currently, I am a supervisor for Starbucks
+                    on a diet of caffiene and always hungry for knowledge. A film geek, amateur wood-worker and photog,
+                    D&D nerd, music lover and overall weird guy. <br />
+                    I have made a big leap to change career paths and follow a newfound passion for all things Web Development.
+                    Interested in giving me a shot? Reach out <a href="#contact">below</a>!
+                    </p>
+                </article>
+                <article>
                 <img src="./assets/images/jack_profilepic.jpg" alt="Picture of Jack looking smug">
-            </article>
-        </section>
-    </div>
+                </article>
+        </div>
+    </section>
         
     <div class="flex-row">
         <h2 class="section-title">Portfolio</h2>
         <section id="portfolio" class="portfolio-cards">
             <a href="https://blindsweatyhansolo.github.io/run-buddy/" target="_blank">
-            <img src="./assets/images/run-buddy.PNG" alt="Preview of Run Buddy's landing page" />
+            <img src="./assets/images/run-buddy.PNG" alt="Screenshot preview of Run Buddy's landing page" />
             </a>
 
-            <img src="./assets/images/keyboard.jpg" alt="Picture of a keyboard" />
+            <img src="./assets/images/keyboard.jpg" alt="Picture of a glowing keyboard" />
 
-            <img src="" alt="Picture of a calendar" />
+            <img src="./assets/images/planner.jpg" alt="Picture of a calendar on a desk with a folded pair of glasses on top" />
 
             <a href="https://blindsweatyhansolo.github.io/Fanpage---HTML/" target="blank">
             <img src="./assets/images/modest_mouse.jpg" alt="Picture of the rock band Modest Mouse" />
