styled aboutme section, still ironing out kinks

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div>
     </section>
     
-    <section id="about-me" class="about-me">
-        <div class="flex-row">
+    <section id="about-me">
+        <div class="flex-row about-me">
 
             <h2 class="section-title">About Me</h2>
             
@@ -48,18 +48,19 @@
                     Jack of all trades, master of a few,
                     always enjoy the challenge of learning something new.
                 </p>
+                <br />
                 <p>
                     Hi! I'm <span>Jack</span>, an aspiring Web Developer. Currently, I am a supervisor for Starbucks
                     on a diet of caffiene and always hungry for knowledge. A film geek, amateur wood-worker and photog,
-                    D&D nerd, music lover and overall weird guy. <br />
-                    I have made a big leap to change career paths and follow a newfound passion for all things Web Development.
+                    D&D nerd, music lover and overall weird guy.
+                    <br />
+                    <br />
+                    I have made a big leap to change career paths and follow a newfound passion for all things Web Development, full stack.
                     Interested in giving me a shot? Reach out <a href="#contact">below</a>!
                 </p>
             </article>
 
-            <div class="profile-photo">
-                <img src="./assets/images/jack_profilepic.jpg" alt="Picture of Jack looking smug">
-            </div>
+            <img src="./assets/images/jack_profilepic.jpg" alt="Picture of Jack looking smug" title="Jack looking smug">            
 
         </div>
     </section>
