updated to display newest project

--- a/index.html
+++ b/index.html
@@ -78,16 +78,25 @@
         
             <!-- FEATURED PROJECT SECTION -->
             <div class="project project-primary">
-                <a href="https://blindsweatyhansolo.github.io/ballzandbooze/" target="blank">
-                <img src="./assets/images/ballzandbooze_screen.png" alt="Screenshot of the Ballz and Booze page" title="Find NBA games and some bars!"/>
+                <a href="https://pitchr314.herokuapp.com/" target="blank">
+                <img src="./assets/images/pitchr314.herokuapp.com_project_1.png" alt="Screenshot of the Pitchr app" title="Pitch your app ideas !"/>
                 </a>
                 <div class="project-info">
-                    <h3>Ballz & Booze</h3>
+                    <h3>Pitchr</h3>
                 </div>
             </div>
             
             <!-- PROJECT SECTION -->
             <div class="project-secondary">
+
+                <div class="project">
+                    <a href="https://blindsweatyhansolo.github.io/ballzandbooze/" target="blank">
+                        <img src="./assets/images/ballzandbooze_screen.png" alt="Screenshot of the Ballz and Booze page" title="Find NBA games and some bars!"/>
+                    </a>
+                    <div class="project-info">
+                        <h3>Ballz & Booze</h3>
+                    </div>
+                </div>
 
                 <div class="project">
                     <a href="https://blindsweatyhansolo.github.io/codequiz/" target="blank">
